erDiagram
    USERS {
        int user_id PK
        uuid public_uuid
        string username
        string first_name
        string last_name_1
        string email
        string lang_pref
        boolean active
    }

    AUTH_ACCOUNTS {
        int auth_account_id PK
        int user_id FK
        string provider
        string email_login
        string password_hash
        boolean active
    }

    ROLES {
        int role_id PK
        string role_name
        boolean active
    }

    USER_ROLES {
        int user_id FK
        int role_id FK
        boolean active
        datetime assigned_at
    }

    PRO_PROFILES {
        int pro_profile_id PK
        int user_id FK
        string display_name
        string phone_contact
        string location_text
        boolean visible
        boolean verified
        string status
    }

    SERVICES {
        int service_id PK
        int pro_profile_id FK
        string service_name
        int duration_min
        decimal base_price
        decimal tax_rate
        boolean tax_exempt
        boolean active
    }

    SCHEDULES {
        int schedule_id PK
        int pro_profile_id FK
        int weekday
        time start_time
        time end_time
        boolean active
    }

    BOOKINGS {
        int booking_id PK
        int client_user_id FK
        int pro_profile_id FK
        int service_id FK
        datetime booking_start
        datetime booking_end
        decimal price_total
        string status
        datetime payment_deadline
    }

    BOOKING_HISTORY {
        int booking_history_id PK
        int booking_id FK
        string status
        datetime changed_at
    }

    USERS ||--o{ AUTH_ACCOUNTS : accede_con
    USERS ||--o{ USER_ROLES : posee
    ROLES ||--o{ USER_ROLES : asigna

    USERS ||--o| PRO_PROFILES : puede_tener
    USERS ||--o{ BOOKINGS : realiza

    PRO_PROFILES ||--o{ SERVICES : ofrece
    PRO_PROFILES ||--o{ SCHEDULES : define
    PRO_PROFILES ||--o{ BOOKINGS : recibe

    SERVICES ||--o{ BOOKINGS : se_reserva_en
    BOOKINGS ||--o{ BOOKING_HISTORY : genera
